@@ -31,7 +31,7 @@ pod2xml - Script to convert PYX to XML.
 
 =head1 SYNOPSIS
 
- pyx2xml [-h] [-i] [--version] [filename] [-]
+ pyx2xml [-e in_enc] [-h] [-i] [--version] [filename] [-]
 
 =head1 DESCRIPTION
 
@@ -40,6 +40,11 @@ pod2xml - Script to convert PYX to XML.
 =head1 ARGUMENTS
 
 =over 8
+
+=item * C<-e in_enc>
+
+ Input encoding.
+ Default value is 'utf-8'.
 
 =item * C<-h>
 
@@ -68,7 +73,8 @@ pod2xml - Script to convert PYX to XML.
  pyx2xml
 
  # Output:
- # Usage: pyx2xml [-h] [-i] [--version] [filename] [-]
+ # Usage: pyx2xml [-e in_enc] [-h] [-i] [--version] [filename] [-]
+ #         -e in_enc       Input encoding (default value is utf-8).
  #         -h              Print help.
  #         -i              Indent output.
  #         --version       Print version.
